--- a/html/Maze.html
+++ b/html/Maze.html
@@ -10,6 +10,17 @@
  	</head>
 
 	<body>
+	
+	<style>
+	
+		body{
+  			background-image: url(../images/Maze%20Bank.jpg);
+  			background-repeat: no-repeat;
+  			background-attachment: fixed;
+		}
+	
+	</style>
+	
         <h1>You've decided to go to the MAZE bank</h1>
         <video width= 30%  src="../videos/Maze.mp4" autoplay controls >
         </video>
