--- a/html/Mount.html
+++ b/html/Mount.html
@@ -10,6 +10,17 @@
  	</head>
 
 	<body>
+		
+	<style>
+	
+		body{
+  			background-image: url(../images/Mount%20chaliad.png);
+  			background-repeat: no-repeat;
+  			background-attachment: fixed;
+		}
+	
+	</style>
+		
         <h1>You've decided to go to Mount Chaliad</h1>
         <video width= 30%  src="../videos/.mp4" autoplay controls >
         </video>
