--- a/html/The_beginning.html
+++ b/html/The_beginning.html
@@ -10,6 +10,15 @@
  	</head>
 
 	<body>
+	
+	<style>
+		body{
+  			background-image: url(../images/AquariusYacht-GTAO-front.png);
+  			background-repeat: no-repeat;
+  			background-attachment: fixed;
+		}
+	</style>
+	
         <h1>You're Carl, an American thief who's very rich and you're about to wake up on your yacht </h1>
         <video width= 30%  src="../videos/openingmp4.mp4" autoplay controls >
         </video>
