--- a/html/chopper.html
+++ b/html/chopper.html
@@ -10,6 +10,15 @@
  	</head>
 
 	<body>
+	
+	<style>
+		body{
+  			background-image: url(../images/AquariusYacht-GTAO-front.png);
+  			background-repeat: no-repeat;
+  			background-attachment: fixed;
+		}
+	</style>
+	
         <h1>You decided to go by chopper </h1>
         <video width= 30%  src="../videos/Gettinginthechopper.mp4" autoplay controls >
         </video>
